--- a/src/appPages/product/AddProduct.module.scss
+++ b/src/appPages/product/AddProduct.module.scss
@@ -1,19 +1,24 @@
 .todoList {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  padding: 20px;
   background: linear-gradient(135deg, #b857f9, #3e6bff);
   min-height: 100vh;
 
+  h1 {
+    color: #333;
+    font-size: 2em;
+    margin-bottom: 20px;
+  }
+
   form {
+    display: flex;
+    flex-direction: column;
     gap: 10px;
     width: 100%;
     max-width: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    margin-bottom: 30px;
 
     input {
       padding: 10px;
@@ -22,6 +27,7 @@
       font-size: 1em;
       width: 100%;
     }
+
     button {
       padding: 10px;
       font-size: 19px;
@@ -39,6 +45,7 @@
       }
     }
   }
+
   .content {
     display: flex;
     gap: 20px;
@@ -46,7 +53,7 @@
     justify-content: center;
     align-items: flex-start;
 
-    .todo {
+    .todoItem {
       width: 100%;
       max-width: 300px;
       padding: 15px;
@@ -61,7 +68,7 @@
       }
 
       &.completed {
-        background: #ff0000;
+        background: #3bff38;
       }
 
       h1 {
